matriculation nr added

--- a/exercise1/exercise1.tex
+++ b/exercise1/exercise1.tex
@@ -3,7 +3,7 @@
 \title{Cloud Computing - Exercise 1\\
 Amazon EC2 - Benchmarking}
 \author{Florian Feigenbutz - 346141\\
-Tim Strehlow - Matriculation number\\
+Tim Strehlow - 316594\\
 Till Rohrmann - 343756}
 \date{\today}
 
